--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <span class="rotatingText-adjective">business goals 🚀</span>
         </p>
       </div>
-      <a href="" class="contact js-contact">
+      <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
         This is the Way 👉
       </a>
     </div>
