--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
           Instagram
         </a>
-        <a href="mailto:info@onxsoftware.com" target="_blank" class="social-item">
+        <a href="mailto:info@onxsoftware.com" class="social-item">
           Email
         </a>
       </div>
