--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ONX Software</title>
+  <meta name="keywords" content="software development, business development, product development, mobile app, web app, web design, website, educational technologies, fintech">
+  <link rel="icon" href="favicon.svg">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
