--- a/index.html
+++ b/index.html
@@ -80,27 +80,36 @@
           <span class="rotatingText-adjective">
             <span
               class="rotatingText-adjective-inner"
-              data-text="specialized knowledge"
+              data-text="Partnership for Success: Bringing Your Ideas to Life"
             >
-              specialized knowledge
+              Partnership for Success: Bringing Your Ideas to Life
             </span>
           </span>
           <span class="rotatingText-adjective">
             <span
               class="rotatingText-adjective-inner"
-              data-text="unique challenges"
-            >unique challenges</span>
+              data-text="Maximizing Product Efficiency: Optimizing for Performance"
+            >Maximizing Product Efficiency: Optimizing for Performance</span>
           </span>
           <span class="rotatingText-adjective">
             <span
               class="rotatingText-adjective-inner"
-              data-text="business goals"
-            >business goals</span>
+              data-text="Elevating Existing Products: Scaling for Growth"
+            >Elevating Existing Products: Scaling for Growth</span>
           </span>
         </p>
+        <div class="hidden-headline">
+          Maximizing Product Efficiency: Optimizing for Performance
+        </div>
+      </div>
+      <div class="summary hidden-on-mobile">
+        We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
+      </div>
+      <div class="summary hidden-up-mobile">
+        We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
       </div>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
-        This is the Way
+        Let's Meet
         <svg class="arrow-svg" width="26px" height="16px" viewBox="0 0 26 16" version="1.1" xmlns="http://www.w3.org/2000/svg">
           <g id="arraw-svg" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="arraw-svg-2" transform="translate(-1212.000000, -246.000000)" fill="#FFFFFF" fill-rule="nonzero">
@@ -122,12 +131,14 @@
         <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
           Instagram
         </a>
-        <a href="mailto:info@onxsoftware.com" class="social-item">
-          Email
-        </a>
       </div>
       <div class="address">
         Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer Istanbul
+      </div>
+      <div>
+        <a href="mailto:info@onxsoftware.com" class="email-box">
+          info@onxsoftware.com
+        </a>
       </div>
     </div>
   </div>
