--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
           Maximizing Product Efficiency: Optimizing for Performance
         </div>
       </div>
-      <div class="summary hidden-on-mobile">
-        We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
-      </div>
-      <div class="summary hidden-up-mobile">
+      <div class="summary">
         We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
       </div>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
