--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
           Maximizing Product Efficiency: Optimizing for Performance
         </div>
       </div>
-      <div class="summary">
+      <div
+        class="summary js-summary"
+        data-text="We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges."
+      >
         We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
       </div>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
@@ -120,23 +123,21 @@
       </a>
       <div class="socials">
         <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item">
-          Linkedin
+          LinkedIn
         </a>
         <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
-          Twitter
+          X
         </a>
         <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
           Instagram
         </a>
       </div>
       <div class="address">
-        Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer Istanbul
+        Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer İstanbul
       </div>
-      <div>
-        <a href="mailto:info@onxsoftware.com" class="email-box">
-          info@onxsoftware.com
-        </a>
-      </div>
+      <a href="mailto:info@onxsoftware.com" class="email-box">
+        info@onxsoftware.com
+      </a>
     </div>
   </div>
 </body>
@@ -172,6 +173,7 @@
     const $logo = document.querySelector('.js-logo-glitch');
     const $headline = document.querySelector('.js-headline');
     const $contact = document.querySelector('.js-contact');
+    const $summary = document.querySelector('.js-summary');
     const $rotatingText = document.querySelector('.js-rotatingText');
     let timeout;
 
@@ -180,6 +182,7 @@
       $headline.classList.add('active');
       $contact.classList.add('active');
       $rotatingText.classList.add('glitch');
+      $summary.classList.add('glitch');
       if (timeout !== undefined) {
           window.clearTimeout(timeout);
           $logo.classList.add('visible');
@@ -190,6 +193,7 @@
         $headline.classList.remove('active');
         $contact.classList.remove('active');
         $rotatingText.classList.remove('glitch');
+        $summary.classList.remove('glitch');
       }, 100);
     });
     document.addEventListener("touchstart", (event) => {
