--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       $contact.classList.add('active');
       $logo.classList.add('visible');
       $rotatingText.classList.add('glitch');
+      $summary.classList.add('glitch');
     });
     document.addEventListener("touchend", (event) => {
       $particles.classList.remove('glitch');
@@ -209,6 +210,7 @@
       $headline.classList.remove('active');
       $contact.classList.remove('active');
       $rotatingText.classList.remove('glitch');
+      $summary.classList.remove('glitch');
     });
   }
 
