--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
       </div>
       <div
         class="summary js-summary"
-        data-text="We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges."
+        data-text="We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges."
       >
-        We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution and offer support. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
+        We empower your business with software, design, web, and mobile application solutions. We manage the entire project lifecycle, from the inception of an idea to its execution. We view our role not just as a service provider, but as a committed partner, helping you anticipate and prepare for future challenges.
       </div>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
         Let's Meet
