--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ONX Software</title>
-  <meta name="keywords" content="software development, business development, product development, mobile app, web app, web design, website, educational technologies, fintech">
+  <meta name="keywords" content="onx yazılım, onx software, software development, business development, product development, mobile app, web app, web design, website, educational technologies, fintech">
   <link rel="icon" href="favicon.svg">
   <link rel="stylesheet" href="./style.css">
+  <link href="./EudoxusSans/stylesheet.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -125,11 +126,11 @@
         <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item">
           LinkedIn
         </a>
-        <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
-          X
-        </a>
         <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
           Instagram
+        </a>
+        <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
+          X (Twitter)
         </a>
       </div>
       <div class="address">
