--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ONX Software</title>
   <meta name="keywords" content="onx yazılım, onx software, software development, business development, product development, mobile app, web app, web design, website, educational technologies, fintech">
-  <link rel="icon" href="favicon.svg">
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="./style.css">
   <link href="./EudoxusSans/stylesheet.css" rel="stylesheet">
 </head>
