--- a/v2/index.html
+++ b/v2/index.html
@@ -263,7 +263,7 @@
           </div>
           <h3>ONX Creator</h3>
           <p>Empower your content creation with our intuitive authoring tool.</p>
-          <a href="#" class="product-link">Coming Soon</a>
+          <a class="product-link">Coming Soon</a>
         </div>
         <div class="product-card">
           <div class="product-icon">
@@ -271,7 +271,7 @@
           </div>
           <h3>ONX Classroom</h3>
           <p>Revolutionize your educational experience with our comprehensive LMS.</p>
-          <a href="#" class="product-link">Coming Soon</a>
+          <a class="product-link">Coming Soon</a>
         </div>
         <div class="product-card">
           <div class="product-icon">
@@ -279,7 +279,7 @@
           </div>
           <h3>ONX Numarator</h3>
           <p>Streamline patient flow and enhance healthcare efficiency.</p>
-          <a href="#" class="product-link">Get Contact</a>
+          <a href="mailto:info@onxsoftware.com" class="product-link">Get Contact</a>
         </div>
       </div>
     </div>
