--- a/v2/index.html
+++ b/v2/index.html
@@ -23,14 +23,16 @@
     <div class="content">
       <div class="header-inner">
         <div class="header-logo-box">
-          <svg class="header-logo" width="124" height="42" viewBox="0 0 740 248" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M172.441 10.0295C127.337 -9.35207 73.0375 -0.64311 36.1969 36.1564C-12.0656 84.3649 -12.0656 162.643 36.1969 210.905C84.4593 259.168 162.683 259.168 210.946 210.905C257.154 164.697 259.121 91.0237 216.846 42.4774C214.968 40.3195 213.002 38.2113 210.948 36.1574C199.523 24.7322 186.422 16.0258 172.441 10.0295ZM124.632 43.3432C103.747 43.0709 82.7836 50.8964 66.8603 66.8198C35.549 98.185 35.549 148.985 66.8603 180.296C98.2255 211.607 149.025 211.607 180.336 180.296C196.249 164.356 204.075 143.396 203.814 122.525L124.632 43.3432ZM430.499 5.87196V148.824V148.932L274.807 5.87196H269.948V53.8105V60.8825V242.488H315.242V102.397V101.695L470.988 242.488H475.793V202.269V190.338V5.87196H430.499ZM554.99 5.87196H507.16L570.7 103.693L491.288 242.326H540.36L618.639 104.124L554.99 5.87196ZM724.128 242.326H676.298L612.596 144.127L690.928 5.87196H740L660.588 144.505L724.128 242.326Z" fill="#CCC5B8"></path>
-          </svg>
+          <a href="#">
+            <svg class="header-logo" width="124" height="42" viewBox="0 0 740 248" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M172.441 10.0295C127.337 -9.35207 73.0375 -0.64311 36.1969 36.1564C-12.0656 84.3649 -12.0656 162.643 36.1969 210.905C84.4593 259.168 162.683 259.168 210.946 210.905C257.154 164.697 259.121 91.0237 216.846 42.4774C214.968 40.3195 213.002 38.2113 210.948 36.1574C199.523 24.7322 186.422 16.0258 172.441 10.0295ZM124.632 43.3432C103.747 43.0709 82.7836 50.8964 66.8603 66.8198C35.549 98.185 35.549 148.985 66.8603 180.296C98.2255 211.607 149.025 211.607 180.336 180.296C196.249 164.356 204.075 143.396 203.814 122.525L124.632 43.3432ZM430.499 5.87196V148.824V148.932L274.807 5.87196H269.948V53.8105V60.8825V242.488H315.242V102.397V101.695L470.988 242.488H475.793V202.269V190.338V5.87196H430.499ZM554.99 5.87196H507.16L570.7 103.693L491.288 242.326H540.36L618.639 104.124L554.99 5.87196ZM724.128 242.326H676.298L612.596 144.127L690.928 5.87196H740L660.588 144.505L724.128 242.326Z" fill="#CCC5B8"></path>
+            </svg>
+          </a>
         </div>
         <nav class="nav">
           <a href="#about" class="nav-item">About</a>
           <a href="#services" class="nav-item">Services</a>
-          <a href="#clients" class="nav-item">Clients</a>
+          <!-- <a href="#clients" class="nav-item">Clients</a> -->
           <a href="#products" class="nav-item">Products</a>
           <a href="#contact" class="nav-item">Contact</a>
         </nav>
@@ -96,6 +98,32 @@
     </div>
   </div>
   <section id="about" class="container light">
+    <div class="content">
+      <h2 class="text-center">Our Clients</h2>
+      <p class="clients-description text-3">
+        At ONX Software, we collaborate with visionary organizations across diverse industries, from innovative startups to established enterprises.
+      </p>
+      <div class="client-grid">
+        <div class="client-item">
+          <img src="./assets/img/wext.png" alt="Wext.com logo" class="client-logo">
+        </div>
+        <div class="client-item">
+          <img src="./assets/img/pipeline.svg" alt="Pipeline logo" class="client-logo">
+        </div>
+        <div class="client-item">
+          <img src="./assets/img/wext-ai.svg" alt="Wext.ai logo" class="client-logo">
+        </div>
+        <div class="client-item">
+          <img src="./assets/img/smart.png" alt="Smart Education logo" class="client-logo">
+        </div>
+        <div class="client-item">
+          <img src="./assets/img/elodi.png" alt="Elodi Education logo" class="client-logo">
+        </div>
+        <div class="client-item">
+          <img src="./assets/img/tc-saglik.png" alt="Havza Devlet Hastanesi logo" class="client-logo">
+        </div>
+      </div>
+    </div>
     <div class="content">
       <h1 class="text-center">About Us</h1>
       <div class="about-content">
@@ -213,71 +241,34 @@
       </div>
     </div>
   </section>
-  <section id="clients" class="container light">
-    <div class="content">
-      <h2 class="text-center">Our Clients</h2>
-      <div class="clients-description">
-        <p class="fancy-text text-center">
-          At ONX Software, we collaborate with visionary organizations across diverse industries, from innovative startups to established enterprises. Our clients represent the forefront of their fields, including AI companies, educational platforms, and healthcare providers. Explore below to see some of the remarkable organizations we've worked with and the impact we've achieved together.
-        </p>
-      </div>
-      <div class="client-grid">
-        <div class="client-item">
-          <img src="./assets/img/wext.png" alt="Wext.com logo" class="client-logo">
-          <p>wext.com</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/wext-ai.svg" alt="Wext.ai logo" class="client-logo">
-          <p>wext.ai</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/smart.png" alt="Smart Education logo" class="client-logo">
-          <p>Smart Education</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/elodi.png" alt="Elodi Education logo" class="client-logo">
-          <p>Elodi Education</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/voya.svg" alt="Voya.digital logo" class="client-logo">
-          <p>voya.digital</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/pipeline.svg" alt="Pipeline logo" class="client-logo">
-          <p>Pipeline</p>
-        </div>
-        <div class="client-item">
-          <img src="./assets/img/tc-saglik.png" alt="Havza Devlet Hastanesi logo" class="client-logo">
-          <p>Ministry Of Health</p>
-        </div>
-      </div>
-    </div>
-  </section>
   <section id="products" class="container light">
     <div class="content">
       <h2 class="text-center">Our Products</h2>
+      <p class="text-3">
+        We develop and support a range of products to meet the diverse needs of our clients and partners.
+      </p>
       <div class="product-showcase">
         <div class="product-card">
           <div class="product-icon">
             <i class="fas fa-pencil-ruler"></i>
           </div>
-          <h3>ONX Creator</h3>
+          <h3>ONX<br><span>Creator</span></h3>
           <p>Empower your content creation with our intuitive authoring tool.</p>
-          <a class="product-link">Coming Soon</a>
+          <a class="product-link">See details</a>
         </div>
         <div class="product-card">
           <div class="product-icon">
             <i class="fas fa-chalkboard-teacher"></i>
           </div>
-          <h3>ONX Classroom</h3>
+          <h3>ONX<br><span>Plus</span></h3>
           <p>Revolutionize your educational experience with our comprehensive LMS.</p>
-          <a class="product-link">Coming Soon</a>
+          <a class="product-link product-link-disabled">Coming soon...</a>
         </div>
         <div class="product-card">
           <div class="product-icon">
             <i class="fas fa-user-clock"></i>
           </div>
-          <h3>ONX Numarator</h3>
+          <h3>ONX<br><span>Numarator</span></h3>
           <p>Streamline patient flow and enhance healthcare efficiency.</p>
           <a href="mailto:info@onxsoftware.com" class="product-link">Get Contact</a>
         </div>
@@ -286,14 +277,8 @@
   </section>
   <section class="container" id="contact">
     <div class="content">
-
-      <div class="logo-box" style="margin-top: auto;">
-        <svg class="logo" width="740" height="100%" viewBox="0 0 740 248" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M172.441 10.0295C127.337 -9.35207 73.0375 -0.64311 36.1969 36.1564C-12.0656 84.3649 -12.0656 162.643 36.1969 210.905C84.4593 259.168 162.683 259.168 210.946 210.905C257.154 164.697 259.121 91.0237 216.846 42.4774C214.968 40.3195 213.002 38.2113 210.948 36.1574C199.523 24.7322 186.422 16.0258 172.441 10.0295ZM124.632 43.3432C103.747 43.0709 82.7836 50.8964 66.8603 66.8198C35.549 98.185 35.549 148.985 66.8603 180.296C98.2255 211.607 149.025 211.607 180.336 180.296C196.249 164.356 204.075 143.396 203.814 122.525L124.632 43.3432ZM430.499 5.87196V148.824V148.932L274.807 5.87196H269.948V53.8105V60.8825V242.488H315.242V102.397V101.695L470.988 242.488H475.793V202.269V190.338V5.87196H430.499ZM554.99 5.87196H507.16L570.7 103.693L491.288 242.326H540.36L618.639 104.124L554.99 5.87196ZM724.128 242.326H676.298L612.596 144.127L690.928 5.87196H740L660.588 144.505L724.128 242.326Z" fill="#CCC5B8"/>
-        </svg>
-      </div>
-      <h2 class="text-center">Let's Take the First Step to Shape the Future of Your Business</h2>
-      <p class="text-center">We're here to help you turn your ideas into reality. Whether you're an investor, an aspiring entrepreneur, or a seasoned team looking to optimize your operations, we're here to turn your ideas into reality.</p>
+      <h2 class="text-center contact-title">Let's Take the First Step to Shape the Future of Your Business</h2>
+      <p class="text-center contact-description">We're here to help you turn your ideas into reality. Whether you're an investor, an aspiring entrepreneur, or a seasoned team looking to optimize your operations, we're here to turn your ideas into reality.</p>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
         Let's Meet
         <svg class="arrow-svg" width="26px" height="16px" viewBox="0 0 26 16" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -307,23 +292,37 @@
           </g>
         </svg>
       </a>
-      <div class="socials">
-        <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item">
-          LinkedIn
-        </a>
-        <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
-          Instagram
-        </a>
-        <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
-          X (Twitter)
-        </a>
-      </div>
-      <div class="address">
-        Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer İstanbul
-      </div>
-      <a href="mailto:info@onxsoftware.com" class="email-box">
-        info@onxsoftware.com
-      </a>
+      <footer class="footer">
+        <div class="footer-top">
+          <div class="footer-logo-box">
+            <svg class="footer-logo" viewBox="0 0 740 248" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M172.441 10.0295C127.337 -9.35207 73.0375 -0.64311 36.1969 36.1564C-12.0656 84.3649 -12.0656 162.643 36.1969 210.905C84.4593 259.168 162.683 259.168 210.946 210.905C257.154 164.697 259.121 91.0237 216.846 42.4774C214.968 40.3195 213.002 38.2113 210.948 36.1574C199.523 24.7322 186.422 16.0258 172.441 10.0295ZM124.632 43.3432C103.747 43.0709 82.7836 50.8964 66.8603 66.8198C35.549 98.185 35.549 148.985 66.8603 180.296C98.2255 211.607 149.025 211.607 180.336 180.296C196.249 164.356 204.075 143.396 203.814 122.525L124.632 43.3432ZM430.499 5.87196V148.824V148.932L274.807 5.87196H269.948V53.8105V60.8825V242.488H315.242V102.397V101.695L470.988 242.488H475.793V202.269V190.338V5.87196H430.499ZM554.99 5.87196H507.16L570.7 103.693L491.288 242.326H540.36L618.639 104.124L554.99 5.87196ZM724.128 242.326H676.298L612.596 144.127L690.928 5.87196H740L660.588 144.505L724.128 242.326Z" fill="#CCC5B8"/>
+            </svg>
+          </div>
+          <div class="socials">
+            <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item">
+              LinkedIn
+            </a>
+            <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
+              Instagram
+            </a>
+            <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
+              X (Twitter)
+            </a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="copyright">
+            ONX Software © 2024
+          </div>
+          <div class="address">
+            Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer İstanbul
+          </div>
+          <!-- <a href="mailto:info@onxsoftware.com" class="email-box">
+            info@onxsoftware.com
+          </a> -->
+        </div>
+      </footer>
     </div>
   </section>
 </body>
